# Generated by Django 5.2.4 on 2025-07-20 11:38

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('content', '0003_rawnews_type'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='AICommentary',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=500)),
                ('script', models.TextField()),
                ('summary', models.CharField(blank=True, max_length=1000, null=True)),
                ('commentary_style', models.CharField(choices=[('news', '新闻'), ('casual', '闲聊'), ('humorous', '幽默'), ('professional', '专业'), ('emotional', '情感')], default='news', max_length=20)),
                ('target_duration', models.IntegerField(blank=True, null=True)),
                ('voice_type', models.CharField(default='standard_female', max_length=50)),
                ('language', models.CharField(default='zh-CN', max_length=10)),
                ('generation_model', models.CharField(blank=True, max_length=50, null=True)),
                ('generation_prompt', models.TextField(blank=True, null=True)),
                ('quality_score', models.DecimalField(blank=True, decimal_places=2, max_digits=3, null=True)),
                ('is_reviewed', models.BooleanField(default=False)),
                ('reviewed_at', models.DateTimeField(blank=True, null=True)),
                ('is_published', models.BooleanField(default=False)),
                ('published_at', models.DateTimeField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('raw_news', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='content.rawnews')),
                ('reviewed_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='reviewed_commentaries', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='AIAudioContent',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('audio_url', models.URLField(max_length=500)),
                ('duration', models.IntegerField()),
                ('file_size', models.BigIntegerField(blank=True, null=True)),
                ('bitrate', models.IntegerField(blank=True, null=True)),
                ('format', models.CharField(default='mp3', max_length=10)),
                ('voice_type', models.CharField(max_length=50)),
                ('speech_rate', models.DecimalField(decimal_places=1, default=1.0, max_digits=3)),
                ('tts_service', models.CharField(blank=True, max_length=50, null=True)),
                ('generation_time', models.IntegerField(blank=True, null=True)),
                ('is_active', models.BooleanField(default=True)),
                ('play_count', models.BigIntegerField(default=0)),
                ('like_count', models.IntegerField(default=0)),
                ('share_count', models.IntegerField(default=0)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('commentary', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ai.aicommentary')),
            ],
        ),
        migrations.CreateModel(
            name='AIVideoContent',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('video_url', models.URLField(max_length=500)),
                ('thumbnail_url', models.URLField(blank=True, max_length=500, null=True)),
                ('duration', models.IntegerField()),
                ('file_size', models.BigIntegerField(blank=True, null=True)),
                ('resolution', models.CharField(blank=True, max_length=20, null=True)),
                ('format', models.CharField(default='mp4', max_length=10)),
                ('avatar_type', models.CharField(blank=True, max_length=50, null=True)),
                ('background_style', models.CharField(blank=True, max_length=50, null=True)),
                ('generation_service', models.CharField(blank=True, max_length=50, null=True)),
                ('generation_time', models.IntegerField(blank=True, null=True)),
                ('is_active', models.BooleanField(default=True)),
                ('play_count', models.BigIntegerField(default=0)),
                ('like_count', models.IntegerField(default=0)),
                ('share_count', models.IntegerField(default=0)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('commentary', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ai.aicommentary')),
            ],
        ),
    ]
