# Generated by Django 4.2.23 on 2025-07-19 21:41

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('contenttypes', '0002_remove_content_type_name'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='ContentTag',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=50, unique=True)),
                ('color_code', models.CharField(blank=True, max_length=7, null=True)),
                ('description', models.TextField(blank=True, null=True)),
                ('usage_count', models.IntegerField(default=0)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
        ),
        migrations.CreateModel(
            name='NewsCategory',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=50)),
                ('name_en', models.CharField(blank=True, max_length=50, null=True)),
                ('description', models.TextField(blank=True, null=True)),
                ('icon_url', models.URLField(blank=True, max_length=255, null=True)),
                ('color_code', models.CharField(blank=True, max_length=7, null=True)),
                ('sort_order', models.IntegerField(default=0)),
                ('is_active', models.BooleanField(default=True)),
                ('keywords', models.JSONField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('parent', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='children', to='content.newscategory')),
            ],
        ),
        migrations.CreateModel(
            name='RawNews',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('source', models.CharField(blank=True, max_length=100, null=True)),
                ('title', models.CharField(max_length=500)),
                ('content', models.TextField()),
                ('summary', models.TextField(blank=True, null=True)),
                ('author', models.CharField(blank=True, max_length=100, null=True)),
                ('source_url', models.URLField(max_length=500, unique=True)),
                ('image_urls', models.JSONField(blank=True, null=True)),
                ('published_at', models.DateTimeField()),
                ('crawled_at', models.DateTimeField(auto_now_add=True)),
                ('language', models.CharField(default='zh-CN', max_length=10)),
                ('tags', models.JSONField(blank=True, null=True)),
                ('keywords', models.JSONField(blank=True, null=True)),
                ('sentiment_score', models.DecimalField(blank=True, decimal_places=2, max_digits=3, null=True)),
                ('importance_score', models.DecimalField(blank=True, decimal_places=2, max_digits=3, null=True)),
                ('is_processed', models.BooleanField(default=False)),
                ('is_duplicate', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('category', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='content.newscategory')),
                ('duplicate_of', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='duplicates', to='content.rawnews')),
            ],
        ),
        migrations.CreateModel(
            name='ContentModeration',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('object_id', models.PositiveIntegerField()),
                ('status', models.CharField(choices=[('pending', '待审核'), ('approved', '通过'), ('rejected', '拒绝'), ('flagged', '标记')], default='pending', max_length=20)),
                ('moderation_reason', models.TextField(blank=True, null=True)),
                ('ai_score', models.DecimalField(blank=True, decimal_places=2, max_digits=3, null=True)),
                ('ai_flags', models.JSONField(blank=True, null=True)),
                ('user_reports_count', models.IntegerField(default=0)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('content_type', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='contenttypes.contenttype')),
                ('moderator', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='ContentTagRelation',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('object_id', models.PositiveIntegerField()),
                ('relevance_score', models.DecimalField(decimal_places=2, default=1.0, max_digits=3)),
                ('is_auto_tagged', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('content_type', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='contenttypes.contenttype')),
                ('tag', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='content.contenttag')),
            ],
            options={
                'unique_together': {('content_type', 'object_id', 'tag')},
            },
        ),
        migrations.CreateModel(
            name='ContentInteractionStats',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('object_id', models.PositiveIntegerField()),
                ('date', models.DateField(blank=True, null=True)),
                ('play_count', models.IntegerField(default=0)),
                ('like_count', models.IntegerField(default=0)),
                ('comment_count', models.IntegerField(default=0)),
                ('share_count', models.IntegerField(default=0)),
                ('favorite_count', models.IntegerField(default=0)),
                ('avg_rating', models.DecimalField(blank=True, decimal_places=2, max_digits=3, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('content_type', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='contenttypes.contenttype')),
            ],
            options={
                'unique_together': {('content_type', 'object_id', 'date')},
            },
        ),
    ]
